# coreml_torch_utils

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: test.yml
coreml_utils/utils/: __init__.py  export_utils.py
tests/: test_coreml_utils.py
